fix html overflow

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,6 @@
 html {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .apiary-color {
